--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,5 @@
 	<link rel="stylesheet" href="/main.css">
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="../main.css">
+	<script data-ad-client="ca-pub-9512495707028343" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
